--- a/api/vercel.json
+++ b/api/vercel.json
@@ -4,9 +4,7 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/api"
-    },
-    {
+      "dest": "/api",
       "headers": [
         { "key": "Access-Control-Allow-Credentials", "value": "true" },
         { "key": "Access-Control-Allow-Origin", "value": "*" },
