--- a/api/vercel.json
+++ b/api/vercel.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
   "builds": [{ "src": "./index.js", "use": "@vercel/node" }],
-  "routes": [
+  "headers": [
     {
       "src": "/(.*)",
       "dest": "/api",
