--- a/api/vercel.json
+++ b/api/vercel.json
@@ -3,7 +3,7 @@
   "builds": [{ "src": "./index.js", "use": "@vercel/node" }],
   "headers": [
     {
-      "src": "/(.*)",
+      "source": "/(.*)",
       "dest": "/api",
       "headers": [
         { "key": "Access-Control-Allow-Credentials", "value": "true" },
